--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = BIGTREE_SKR_PRO
 include_dir  = Marlin
 
 #
@@ -56,7 +56,7 @@ HAS_TMC26X              = TMC26XStepper=https://github.com/trinamic/TMC26XSteppe
 HAS_L64XX               = Arduino-L6470@0.8.0
 NEOPIXEL_LED            = Adafruit NeoPixel@1.5.0
 MAX6675_IS_MAX31865     = Adafruit MAX31865 library@~1.1.0
-HAS_GRAPHICAL_LCD       = U8glib-HAL@0.4.1
+HAS_GRAPHICAL_LCD       = U8glib-HAL@0.4.2
                           src_filter=+<src/lcd/dogm>
 USES_LIQUIDCRYSTAL      = LiquidCrystal@1.5.0
 USES_LIQUIDTWI2         = LiquidTWI2@1.2.7
