--- a/platformio.ini
+++ b/platformio.ini
@@ -725,7 +725,7 @@ board    = nxp_lpc1769
 platform      = ststm32@~10.0
 build_flags   = ${common.build_flags}
   -std=gnu++14
-  -DUSBCON -DUSBD_USE_CDC
+ ;-DUSBCON -DUSBD_USE_CDC
   -DTIM_IRQ_PRIO=13
 build_unflags = -std=gnu++11
 src_filter    = ${common.default_src_filter} +<src/HAL/STM32> +<src/HAL/shared/backtrace>
