--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = BIGTREE_SKR_PRO
+default_envs = mega2560
 include_dir  = Marlin
 
 #
@@ -243,7 +243,7 @@ HAS_L64XX               = Arduino-L6470@0.8.0
                           src_filter=+<src/libs/L64XX> +<src/module/stepper/L64xx.cpp> +<src/gcode/feature/L6470> +<src/HAL/shared/HAL_spi_L6470.cpp>
 NEOPIXEL_LED            = Adafruit NeoPixel@1.5.0
                           src_filter=+<src/feature/leds/neopixel.cpp>
-MAX6675_._IS_MAX31865   = Adafruit MAX31865 library@~1.1.0
+TEMP_.+_IS_MAX31865     = Adafruit MAX31865 library@~1.1.0
 USES_LIQUIDCRYSTAL      = bitbucket-fmalpartida/LiquidCrystal@1.5.0
 USES_LIQUIDCRYSTAL_I2C  = marcoschwartz/LiquidCrystal_I2C@1.1.4
 USES_LIQUIDTWI2         = LiquidTWI2@1.2.7
@@ -1307,8 +1307,8 @@ build_flags       = ${common_stm32.build_flags}
   -DSTM32F407_5ZX -DVECT_TAB_OFFSET=0x8000
 extra_scripts     = ${common.extra_scripts}
   pre:buildroot/share/PlatformIO/scripts/generic_create_variant.py
-upload_protocol   = stlink
-upload_command    = "$PROJECT_PACKAGES_DIR/tool-stm32duino/stlink/ST-LINK_CLI.exe" -c SWD -P "$BUILD_DIR/firmware.bin" 0x8008000 -Rst -Run
+#upload_protocol   = stlink
+#upload_command    = "$PROJECT_PACKAGES_DIR/tool-stm32duino/stlink/ST-LINK_CLI.exe" -c SWD -P "$BUILD_DIR/firmware.bin" 0x8008000 -Rst -Run
 debug_tool        = stlink
 debug_init_break  =
 
